# Timpapers

./: .gitignore  README.md  app.py  author_config.example.toml  author_config.toml  pyproject.toml  timpapers.db
backend/: README.md  pyproject.toml
backend/app/: config.py  db.py  jobs.py  logging_config.py  main.py  models.py  schemas.py
backend/app/api/: routes.py
backend/app/services/: alerts.py  clients.py  metrics.py  normalization.py  sync.py
backend/tests/: test_metrics.py  test_normalization.py
ios-app/: README.md
ios-app/App/: TimPapersApp.swift
ios-app/Features/Dashboard/: DashboardView.swift
ios-app/Features/Metrics/: HIndexAnalysisView.swift
ios-app/Features/PaperDetail/: PaperDetailView.swift
ios-app/Features/Papers/: PapersListView.swift
ios-app/Features/Settings/: SettingsView.swift
ios-app/Models/: APIModels.swift
ios-app/Networking/: APIClient.swift
ios-app/Persistence/Cache/: AppCache.swift
ios-app/Shared/: WidgetSync.swift
ios-app/WidgetExtension/: TimPapersWidget.swift
pages/: 1_Overview.py  2_Analysis.py  3_Details.py  4_Comparison.py  4_Settings.py  5_Settings.py
scripts/: test_scholarly.py
src/timpapers/: __init__.py  config.py  database.py  models.py
src/timpapers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/timpapers/plotting/: __init__.py  charts.py
src/timpapers/services/: __init__.py  alerts.py  analytics.py  bibliography.py  bootstrap.py  clients.py  normalization.py  sync.py
tests/: test_clients.py  test_metrics.py  test_normalization.py
